# ComicReader

./: .gitignore  CMakeLists.txt  README.md
include/: FolderReader.h  ReaderWindow.h  ThumbnailDelegate.h
src/: FolderReader.cpp  ReaderWindow.cpp  main.cpp
